<resources>
    <string name="app" translatable="false">Gamlang</string>

    <!--Main menu-->
    <string name="learn">Learn</string>
    <string name="dictionary">Dictionary</string>
    <string name="watch_video">Watch</string>
    <string name="add_words">Add words</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="add_to_dict">Add to dictionary</string>
    <string name="translate">Translate</string>

    <string name="context_pattern" translatable="false">- %1$s \n\n- %2$s</string>

    <!--Explore fragment-->
    <string name="explore">Explore</string>
    <string name="suggestions">Suggestions for you</string>
    <string name="search_new_words_label">Find new words to learn</string>
    <string name="search_word_hint_en">Search for a word in English</string>
    <string name="search_word_hint_ru">Search for a word in Russian</string>
    <string name="search_word_hint">Search for a word in %1$s</string>
    <string name="settings">Settings</string>

    <!--CardEntry creation-->
    <string name="add_images">Add Image(s)</string>
    <string name="pick_image">Pick an image</string>
    <string name="popular_images">Popular Images</string>
    <string name="card_added">Card added</string>
    <string name="what_to_do_next">What do you want to do next?</string>
    <string name="add_another_word">Add a word</string>
    <string name="learn_words">Learn words</string>

    <!--Word-->
    <string name="IPA" translatable="false">[%1$s] •\u0020</string>

    <!--Error messages-->
    <string name="error_empty_field">Nothing to translate… :\'(</string>
    <string name="error_no_translation">Can\'t translate, check your internet connection</string>
    <string name="error_add_to_dictionary">There is nothing to add to the dictionary</string>
    <string name="error_no_images">Can\'t fetch images</string>

    <!--Actions-->
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>


    <!--Preferences-->

    <!--Languages-->
    <string name="pref_lang_eng_label">English</string>
    <string name="pref_lang_ro_label">Romanian</string>
    <string name="pref_lang_ru_label">Russian</string>

    <string name="pref_lang_eng_value">english</string>
    <string name="pref_lang_ro_value">romanian</string>
    <string name="pref_lang_ru_value">russian</string>

    <string name="pref_from_lang_label">Translate from language</string>
    <string name="pref_from_lang_key" translatable="false">translate_from_lang</string>

    <string name="pref_to_lang_label">Translate to language</string>
    <string name="pref_to_lang_key" translatable="false">translate_to_lang</string>

    <!---Cache-->
    <string name="pref_total_cards_key" translatable="false">total_cards</string>
    <!--URLs-->
    <string name="media_url_video" translatable="false">http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4</string>
    <string name="media_url_sub" translatable="false">https://dl.dropboxusercontent.com/s/3axkrfxznzhqns1/MrRobotS01E01EN.srt</string>
    <string name="video_url_mr_robot" translatable="false">https://www4.mp4upload.com:282/d/rcxtt2lbz2tc2vuo2gurgj2lk6xhj6unkll6pfxwdzwzlsftqal2vona/video.mp4</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="dont_remember">Don\'t remember</string>
    <string name="remember">Remember</string>
    <string name="create_card">Create card</string>
    <string name="no_cards">There is nothing here</string>
    <string name="create_new_one">Create new one</string>
    <string name="cards_info">You have %1$d cards</string>
    <string name="remaining_words">Remaining words</string>

</resources>