<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/search_new_words_label"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_find_new_words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/customborder"
            app:defaultQueryHint="@string/search_word_hint_en"
            app:iconifiedByDefault="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:progress="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sv_find_new_words"
            app:layout_constraintStart_toStartOf="@+id/sv_find_new_words"
            app:layout_constraintTop_toTopOf="@+id/sv_find_new_words"
            app:layout_constraintVertical_bias="0.68"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/suggestions"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <!--<GridView-->
        <!--android:id="@+id/gv_suggestion_words"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:numColumns="2"-->
        <!--android:columnWidth="200dp"-->
        <!--android:verticalSpacing="2dp"-->
        <!--android:horizontalSpacing="2dp"-->
        <!--android:stretchMode="columnWidth"-->
        <!--android:gravity="center"-->
        <!--android:scrollbars="none">-->
        <!--</GridView>-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_suggestion_words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnWidth="200dp"
            android:gravity="center"
            android:horizontalSpacing="2dp"
            android:numColumns="2"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="2dp"
            android:visibility="visible">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

</LinearLayout>